Refactor appointment management: update appointment creation and retrieval logic, enhance validation, and implement role-based access control